<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_story"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:transitionName="animasi_card_story"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/gambar"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/RoundedCornerImageView"
            app:srcCompat="@drawable/bgbngit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_name"
                android:fontFamily="sans-serif-condensed"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_star"
                    android:contentDescription="@string/star_rating" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_rating"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="15sp"
                    android:textColor="@color/orange700"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"/>

                <ImageView
                    android:id="@+id/pembatas"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    app:srcCompat="@drawable/ic_dot"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area_name"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/day_and_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hari_dan_tanggal"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/format_jam"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="15sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom">
                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/main_green_color"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="end"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>