<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.success.SuccessActivity">

    <ImageView
        android:id="@+id/iv_success"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/ic_success"
        android:contentDescription="@string/transaction_successful" />

    <TextView
        android:id="@+id/tv_transaction_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_success"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/transaction_successful"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_payment_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_transaction_success"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/payment_successful"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layout_no_transaksi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_payment_success"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/bottom_border">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/transaction_number_text"
                android:textSize="18sp"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/nomor_transaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_number"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="end"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pembayaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout_no_transaksi"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/bottom_border">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/total_payment"
                android:textSize="18sp"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/total_pembayaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biaya_total"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="end"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout_pembayaran"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/bottom_border">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/tanggal_transaksi_teks"
                android:textSize="18sp"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">
            <TextView
                android:id="@+id/tanggal_transaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_transaksi"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="end"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/back_to_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="Kembali ke Beranda"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"/>

</RelativeLayout>