<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_modal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/modal_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="7dp">

        <LinearLayout
            android:id="@+id/modal_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="350dp"
            android:background="@color/orange200"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_line"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_line"
                android:contentDescription="@string/fine_line" />

            <TextView
                android:id="@+id/title_syarat_ketentuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/syarat_ketentuan"
                android:fontFamily="sans-serif-condensed"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_syarat_ketentuan"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/white"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp">
                <TextView
                    android:id="@+id/tv_syarat_ketentuan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lorem_ipsum"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="top|start"
                    android:padding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/layout_acc_syarat_ketentuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center_vertical">
                <CheckBox
                    android:id="@+id/checkbox_syarat_ketentuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/tv_acc_syarat_ketentuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sk"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="13sp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>


            <Button
                android:id="@+id/btn_pesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/orange700"
                android:text="@string/pesan"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>